--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/icoder">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/icoder/index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="/icoder/about.html">About</a>
