--- a/Contact.html
+++ b/Contact.html
@@ -39,7 +39,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/icoder/Contact.html">Contact Us</a>
+                    <a class="nav-link" href="/icoder/contact.html">Contact Us</a>
                 </li>
 
 
