--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="image3.jpg" class="d-block w-100" alt="...">
+              <img src="image3.jpg" class="d-block w-100"height="350" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="image3.jpg" class="d-block w-100" alt="...">
+              <img src="image3.jpg" class="d-block w-100" height="350"alt="...">
             </div>
             <div class="carousel-item">
-              <img src="image3.jpg" class="d-block w-100" alt="...">
+              <img src="image3.jpg" class="d-block w-100" height="350"alt="...">
             </div>
           </div>
         </div>
