--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
         </div>
         <div class="row featurette d-flex justify-content align-items-center">
             <div class="col p-4 ">
-              <strong class="d-inline-block mb-2 text-danger">Phython</strong>
-              <h3 class="mb-0">The Best Learning Platform For Phython</h3>
+              <strong class="d-inline-block mb-2 text-danger">Python</strong>
+              <h3 class="mb-0">The Best Learning Platform For Python</h3>
               <div class="mb-1 text-muted">Started Soon</div>
               <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
               <a href="#" class="stretched-link">Continue reading</a>
